@@ -48,9 +48,9 @@ copyright = u'2012, The BIOM Project'
 # built documents.
 #
 # The short X.Y version.
-version = "1.0.0-dev"
+version = "1.1"
 # The full version, including alpha/beta/rc tags.
-release = "1.0.0-dev"
+release = "1.1.0"
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
