@@ -25,7 +25,7 @@ __copyright__ = "Copyright 2012, BIOM-Format Project"
 __credits__ = ["Justin Kuczynski","Daniel McDonald"] #remember to add yourself
 __license__ = "GPL"
 __url__ = "http://biom-format.org"
-__version__ = "1.0.0-dev"
+__version__ = "1.1.0"
 __maintainer__ = "Justin Kuczynski"
 __email__ = "justinak@gmail.com"
 
