@@ -11,7 +11,7 @@ __credits__ = ["Rob Knight", "Peter Maxwell", "Sandra Smit",
                             "Zongzhi Liu", "Micah Hamady", "Daniel McDonald"]
 __license__ = "GPL"
 __url__ = "http://biom-format.org"
-__version__ = "1.0.0-dev"
+__version__ = "1.1.0"
 __maintainer__ = "Daniel McDonald"
 __email__ = "daniel.mcdonald@colorado.edu"
 
