@@ -17,7 +17,7 @@ __credits__ = ["Greg Caporaso", "Daniel McDonald",
                "Jose Carlos Clemente Litran", "Jai Ram Rideout"]
 __license__ = "GPL"
 __url__ = "http://biom-format.org"
-__version__ = "1.0.0-dev"
+__version__ = "1.1.0"
 __maintainer__ = "Greg Caporaso"
 __email__ = "gregcaporaso@gmail.com"
 
