@@ -10,7 +10,7 @@ __author__ = "Daniel McDonald"
 __copyright__ = "Copyright 2012, The BIOM Format"
 __credits__ = ["Greg Caporaso", "Daniel McDonald", "Jose Clemente"]
 __license__ = "GPL"
-__version__ = "1.0.0-dev"
+__version__ = "1.1.0"
 __maintainer__ = "Daniel McDonald"
 __email__ = "mcdonadt@colorado.edu"
 __status__ = "Development"
